# example-FunASR

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
slmasr-src/: setup.py
slmasr-src/slmasr/: api.py  mimedb.py  test.py
src/slmasr/: api.py  helper.py
