[project]
name = "slmasr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Weiyi Feng", email = "fwy1998@gmail.com" }
]
dependencies = [
    "funasr>=1.0.25",
    "modelscope>=1.14.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "fastapi>=0.111.0",
    "python-multipart>=0.0.9",
    "ffmpeg-binaries>=1.0.0",
    "aiohttp>=3.9.5",
]
#dev-dependencies = [
#    "torch==2.3.0+cu121",
#    "torchvision==0.18.0+cu121",
#    "torchaudio==2.3.0+cu121",
#]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slmasr"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
